# thrift

./: .gitignore  .travis.yml  configure.ac
aclocal/: ax_thrift_internal.m4
compiler/cpp/: CMakeLists.txt  Makefile.am
compiler/cpp/src/: Makefile.am  dummy_registry.cpp  main.cc
compiler/cpp/src/generate/: IndentGuard.h  IndentKeeper.cpp  IndentKeeper.h  Makefile.am  OutputGenerator.cpp  OutputGenerator.h  PrePostGuard.h  ScopeGuard.h  t_cpp_generator.cc  t_cpp_v1_generator.cc  t_cpp_v1_generator.h  t_cpp_v2_generator.cc  t_cpp_v2_generator.h  t_generator.h  t_generator_registry.h  t_php_generator.cc
compiler/cpp/src/generate/cpp_v2/: ArgsRefsStructBuilder.cpp  ArgsRefsStructBuilder.h  ArgsRefsStructGenerator.h  ArgsRefsStructMembersGenerator.cpp  ArgsRefsStructMembersGenerator.h  ArgsStructBuilder.cpp  ArgsStructBuilder.h  ArgsStructGenerator.h  ArgsStructMembersGenerator.cpp  ArgsStructMembersGenerator.h  AssignmentOperatorGenerator.cpp  AssignmentOperatorGenerator.h  ClassScopeGuard.h  ClientFunctionGenerator.cpp  ClientFunctionGenerator.h  CompleteStructMembersGenerator.cpp  CompleteStructMembersGenerator.h  ContentsGenerator.cpp  ContentsGenerator.h  CopyConstructorGenerator.cpp  CopyConstructorGenerator.h  DefaultConstructorGenerator.cpp  DefaultConstructorGenerator.h  EnumGenerator.cpp  EnumGenerator.h  EnumHashGenerator.cpp  EnumHashGenerator.h  FieldsGenerator.cpp  FieldsGenerator.h  FieldsRefsGenerator.cpp  FieldsRefsGenerator.h  FunctionArgsGenerator.cpp  FunctionArgsGenerator.h  FunctionGenerator.cpp  FunctionGenerator.h  HandlerFactoryGenerator.cpp  HandlerFactoryGenerator.h  HashGenerator.cpp  HashGenerator.h  HeaderFileGenerator.cpp  (+79 more)
compiler/cpp/src/generate/cpp_v2/tests/: ArgsRefsStructBuilderTests.cpp  ArgsRefsStructMembersGeneratorTests.cpp  ArgsStructBuilderTests.cpp  ArgsStructMembersGeneratorTests.cpp  AssignmentOperatorGeneratorTests.cpp  ClientFunctionGeneratorTests.cpp  CompilerCppV2UnitTestMain.cpp  CompleteStructMembersGeneratorTests.cpp  ContentsGeneratorStub.h  CopyConstructorGeneratorTests.cpp  DefaultConstructorGeneratorTests.cpp  EnumGeneratorTests.cpp  FieldsGeneratorTests.cpp  FieldsRefsGeneratorTests.cpp  FunctionArgsGeneratorTests.cpp  FunctionGeneratorTests.cpp  HandlerFactoryGeneratorTests.cpp  HeaderFileGeneratorTests.cpp  IfaceGeneratorTests.cpp  IncludesGeneratorTests.cpp  IncludesScannerTests.cpp  Makefile.am  MethodGeneratorTests.cpp  MoveAssignmentOperatorGeneratorTests.cpp  MoveConstructorGeneratorTests.cpp  OperatorEqGeneratorTests.cpp  OperatorLtGeneratorTests.cpp  OperatorOstreamGeneratorTests.cpp  ProcessorRegisterDispatchesGeneratorTests.cpp  RecvFunctionGeneratorTests.cpp  ResultRefFieldsGeneratorTests.cpp  ResultRefStructMembersGeneratorTests.cpp  ResultStructBuilderTests.cpp  SendFunctionGeneratorTests.cpp  ServiceClientGeneratorTests.cpp  ServiceFunctionGeneratorTests.cpp  ServiceInternalObjectsGeneratorTests.cpp  ServiceInternalStructListGeneratorTests.cpp  SingletonHandlerFactoryGeneratorTests.cpp  SourceFileGeneratorTests.cpp  (+13 more)
compiler/cpp/src/generate/tests/: IndentGuardTests.cpp  IndentKeeperTests.cpp  Makefile.am  OutputGeneratorTests.cpp  ScopeGuardTests.cpp  parse_dummies.cpp
compiler/cpp/src/parse/: parse.cc  t_base_type.cc  t_base_type.h  t_enum.h  t_enum_value.h  t_field.h  t_service.h  t_struct.h
lib/: Makefile.am
lib/cpp/: Makefile.am
lib/cpp/src/thrift/protocol/: TJSONProtocol.cpp
lib/cpp/test/: DenseProtoTest.cpp  EnumTest.cpp  Makefile.am  ToStringTest.cpp
lib/cpp_v2/: Makefile.am  README.md  thrift-z.pc.in  thrift.pc.in
lib/cpp_v2/src/thrift/: BoostOptionalUtils.h  TException.h  THashCombine.h  TLogging.h  TReflectionLocal.h  TToString.h  Thrift.cpp  Thrift.h
lib/cpp_v2/src/thrift/async/: TAsyncBufferProcessor.h  TAsyncChannel.cpp  TAsyncChannel.h  TAsyncDispatchProcessor.h  TAsyncProcessor.h  TAsyncProtocolProcessor.cpp  TAsyncProtocolProcessor.h  TEvhttpClientChannel.cpp  TEvhttpClientChannel.h  TEvhttpServer.cpp
lib/cpp_v2/src/thrift/client/: ClientBase.cpp  ClientBase.h
lib/cpp_v2/src/thrift/concurrency/: BlockingQueue.h  Exception.h  WorkerPool.cpp  WorkerPool.h
lib/cpp_v2/src/thrift/processor/: Dispatcher.h  PeekProcessor.h  ProcessArgs.h  StatsProcessor.h  TConnectionInfo.h  TDispatchProcessor.h  TMultiplexedProcessor.h  TProcessor.h
lib/cpp_v2/src/thrift/protocol/: TBase64Utils.h  TBinaryProtocol.h  TBinaryProtocol.tcc  TCompactProtocol.h  TCompactProtocol.tcc  TDebugProtocol.cpp  TDebugProtocol.h  TDenseProtocol.cpp  TDenseProtocol.h  TJSONProtocol.cpp  TJSONProtocol.h  TMultiplexedProtocol.cpp  TMultiplexedProtocol.h  TProtocol.h  TProtocolDecorator.h  TProtocolTap.h  TVirtualProtocol.h
lib/cpp_v2/src/thrift/server/: TServer.cpp  TServer.h  TSimpleServer.cpp  TSimpleServer.h  TThreadedServer.cpp  TThreadedServer.h
lib/cpp_v2/src/thrift/transport/: PlatformSocket.h  TBufferTransports.cpp  TBufferTransports.h  TFileTransport.cpp  TFileTransport.h  THttpClient.cpp  THttpServer.cpp  THttpServer.h  THttpTransport.cpp  THttpTransport.h  TPipe.cpp  TPipe.h  TPipeServer.cpp  TPipeServer.h  TSSLServerSocket.cpp  TSSLServerSocket.h  TSSLSocket.cpp  TSSLSocket.h  TServerSocket.cpp  TServerSocket.h  TServerTransport.h  TShortReadTransport.h  TSocket.cpp  TSocketPool.cpp  TSocketPool.h  TTransport.h  TTransportUtils.cpp  TTransportUtils.h  TZlibTransport.cpp  TZlibTransport.h
lib/cpp_v2/src/thrift/windows/: GetTimeOfDay.h  OverlappedSubmissionThread.cpp  OverlappedSubmissionThread.h  config.h
lib/cpp_v2/test/: Makefile.am
lib/cpp_v2/test/unit_tests/: CppV2UnitTestsMain.cpp  EnumTests.cpp  Makefile.am  ToStringTests.cpp  TypedefTests.cpp
lib/cpp_v2/test/unit_tests/processor/: DispatcherTests.cpp
test/: EnumTest.thrift
tutorial/: Makefile.am
tutorial/cpp/: Makefile.am
tutorial/cpp_v2/: CppClient.cpp  Makefile.am
